--- a/index.html
+++ b/index.html
@@ -115,11 +115,7 @@
 							/>
 						</div>
 
-						<button
-							class="button__register text"
-							type="submit"
-							onclick="saveDataParticipant()"
-						>
+						<button class="button__register text" type="submit">
 							Cadastrar
 						</button>
 						<div id="form__message"></div>
